--- a/css/styles.css
+++ b/css/styles.css
@@ -4186,9 +4186,36 @@ img.u-pull-left {
  *
  * ------------------------------------------------------------------- */
 
+.status-container {
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+.status-indicator {
+  width: 10px;
+  height: 10px;
+  background-color: green;
+  border-radius: 50%;
+  margin-right: 10px;
+  animation: blink 1s infinite;
+}
+
+@keyframes blink {
+  0%,
+  100% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+}
+
 .contact-top {
   padding-top: var(--vspace-5);
-  border-top: 1px solid var(--color-border);
+  /* border-top: 1px solid var(--color-border); */
 }
 
 .contact-top .h1 {
