[update] improve css and minimize sentences

--- a/css/styles.css
+++ b/css/styles.css
@@ -4412,3 +4412,24 @@ img.u-pull-left {
     right: 6vw;
   }
 }
+
+
+.social-link-animation {
+  display: inline-block;
+  position: relative;
+  animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+  0% {
+      transform: translateY(0);
+  }
+
+  50% {
+      transform: translateY(-7.5px);
+  }
+
+  100% {
+      transform: translateY(0);
+  }
+} 
